[gd_scene load_steps=54 format=3 uid="uid://cc1m2a1obsyn4"]

[ext_resource type="Script" path="res://addons/fpc/character.gd" id="1_0t4e8"]
[ext_resource type="Script" path="res://addons/fpc/BodyShadow.gd" id="2_5o4fy"]
[ext_resource type="Shader" path="res://addons/fpc/character.gdshader" id="3_pevgd"]
[ext_resource type="Script" path="res://addons/fpc/EditorModule.gd" id="3_v3ckk"]
[ext_resource type="Script" path="res://addons/fpc/debug.gd" id="3_x1wcc"]
[ext_resource type="FontFile" uid="uid://ctajkdefq88fg" path="res://Assets/Fonts/coldnightforalligators.ttf" id="4_4nvet"]
[ext_resource type="AudioStream" uid="uid://pabnmo2kh8ri" path="res://Assets/SFX/steps/step_metal1.ogg" id="4_g3qfg"]
[ext_resource type="AudioStream" uid="uid://cmjlxpdr2qe2d" path="res://Assets/SFX/steps/step_metal2.ogg" id="5_aiuo4"]
[ext_resource type="AudioStream" uid="uid://cmcboj8010bun" path="res://Assets/SFX/steps/step_metal11.ogg" id="6_skq3o"]
[ext_resource type="AudioStream" uid="uid://dr5mpt25jwcpq" path="res://Assets/SFX/steps/step_metal3.ogg" id="7_obbav"]
[ext_resource type="AudioStream" uid="uid://b8hfsi7earnbp" path="res://Assets/SFX/steps/step_metal4.ogg" id="8_ijfov"]
[ext_resource type="AudioStream" uid="uid://bcubc48ms1ral" path="res://Assets/SFX/steps/step_metal5.ogg" id="9_pa8pd"]
[ext_resource type="AudioStream" uid="uid://cpb4pj767wos0" path="res://Assets/SFX/steps/step_metal6.ogg" id="10_kevp7"]
[ext_resource type="AudioStream" uid="uid://c07pd1o735evd" path="res://Assets/SFX/steps/step_metal7.ogg" id="11_qlqt4"]
[ext_resource type="AudioStream" uid="uid://bnkiomk5thbrg" path="res://Assets/SFX/steps/step_metal8.ogg" id="12_xtn5i"]
[ext_resource type="AudioStream" uid="uid://dim1vrsgtrfqm" path="res://Assets/SFX/steps/step_metal9.ogg" id="13_ktixa"]
[ext_resource type="AudioStream" uid="uid://dcr0c1gfhke6w" path="res://Assets/SFX/steps/step_metal10.ogg" id="14_vrhjc"]
[ext_resource type="AudioStream" uid="uid://8klkxr62rddd" path="res://Assets/SFX/noise/noise1.ogg" id="16_jncaw"]
[ext_resource type="AudioStream" uid="uid://c28hepeugpk6c" path="res://Assets/SFX/noise/noise2.ogg" id="17_a5d4c"]
[ext_resource type="AudioStream" uid="uid://chew24oh7dyik" path="res://Assets/SFX/steps/step_concrete1.ogg" id="17_d0tqo"]
[ext_resource type="AudioStream" uid="uid://cs1onigspbp87" path="res://Assets/SFX/noise/noise3.ogg" id="18_g00yu"]
[ext_resource type="AudioStream" uid="uid://bphici5ky216f" path="res://Assets/SFX/steps/step_concrete2.ogg" id="18_wgewb"]
[ext_resource type="AudioStream" uid="uid://dsnfe0a3cej2r" path="res://Assets/SFX/steps/step_concrete3.ogg" id="19_ihgic"]
[ext_resource type="AudioStream" uid="uid://f8p6nw6wiqbw" path="res://Assets/SFX/noise/tintinnus.ogg" id="20_13moh"]
[ext_resource type="AudioStream" uid="uid://bjyuon727hfeb" path="res://Assets/SFX/steps/step_concrete4.ogg" id="20_u3i4r"]
[ext_resource type="AudioStream" uid="uid://cgrqrye0wt0vg" path="res://Assets/SFX/steps/step_concrete5.ogg" id="21_u6ivp"]
[ext_resource type="AudioStream" uid="uid://dx5ce3bw0qc6n" path="res://Assets/SFX/steps/step_concrete6.ogg" id="22_7kqfx"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_uy03j"]

[sub_resource type="Animation" id="Animation_j8cx7"]
resource_name = "RESET"
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Collision:scale")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Collision:position")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 1, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Head:position")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 1.5, 0)]
}

[sub_resource type="Animation" id="Animation_5ec5e"]
resource_name = "crouch"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Collision:scale")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(1, 1, 1), Vector3(1, 0.75, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Collision:position")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 1, 0), Vector3(0, 0.75, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Head:position")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 1.5, 0), Vector3(0, 1.12508, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_5e5t5"]
_data = {
"RESET": SubResource("Animation_j8cx7"),
"crouch": SubResource("Animation_5ec5e")
}

[sub_resource type="SphereMesh" id="SphereMesh_2oomd"]
radius = 0.41
height = 1.295

[sub_resource type="BoxShape3D" id="BoxShape3D_f85ux"]
size = Vector3(2, 2, 5.03491)

[sub_resource type="Animation" id="Animation_lej81"]
resource_name = "AttackAnimation"
length = 0.7
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3, 0.4, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector3(0.542544, -0.494029, -0.517776), Vector3(-0.585794, -0.367, -0.388861), Vector3(-0.585794, -0.367, -0.388861), Vector3(0.542544, -0.494029, -0.517776)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:rotation")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.3, 0.4, 0.5, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector3(0, -1.65119, 0), Vector3(-0.965167, -1.56731, 0.719076), Vector3(-1.5708, 0.959931, 0), Vector3(-1.5708, 0.959931, 0), Vector3(0, 0, 0), Vector3(0, -1.65119, 0)]
}

[sub_resource type="Animation" id="Animation_5628p"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0.379, -0.367, -0.462)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, -1.42593, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_mtltv"]
_data = {
"AttackAnimation": SubResource("Animation_lej81"),
"RESET": SubResource("Animation_5628p")
}

[sub_resource type="Animation" id="Animation_gh776"]
resource_name = "RESET"
length = 0.001
loop_mode = 1
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Camera:position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Camera:position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}

[sub_resource type="Animation" id="Animation_8ku67"]
resource_name = "sprint"
length = 2.0
loop_mode = 1
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Camera:position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0, 1, 0, 1, 0),
"points": PackedFloat32Array(0.06, -0.25, 0, 0.25, -0.01, 0, 0, 0, 0, 0, -0.06, -0.25, 0.01, 0.25, 0.01, 0, 0, 0, 0, 0, 0.06, -0.25, -0.01, 0.25, 0),
"times": PackedFloat32Array(0, 0.5, 1, 1.5, 2)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Camera:position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0, 0, 0, 0, 0),
"points": PackedFloat32Array(0.05, -0.25, 0, 0.2, -0.01, 0, -0.2, 0.000186046, 0.2, 0.000186046, 0.05, -0.2, -0.01, 0.2, -0.01, 0, -0.2, 0, 0.2, 0, 0.05, -0.2, -0.01, 0.25, 0),
"times": PackedFloat32Array(0, 0.5, 1, 1.5, 2)
}

[sub_resource type="Animation" id="Animation_lrqmv"]
resource_name = "walk"
length = 2.0
loop_mode = 1
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Camera:position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0, 1, 0, 1, 0),
"points": PackedFloat32Array(0.04, -0.25, 0, 0.25, 0, 0, 0, 0, 0, 0, -0.04, -0.25, 0, 0.25, 0, 0, 0, 0, 0, 0, 0.04, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.5, 1, 1.5, 2)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Camera:position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0, 0, 0, 0, 0),
"points": PackedFloat32Array(-0.05, -0.25, 0, 0.2, 0.005, 0, -0.2, 0.000186046, 0.2, 0.000186046, -0.05, -0.2, 0.005, 0.2, 0.005, 0, -0.2, 0, 0.2, 0, -0.05, -0.2, 0.005, 0.25, 0),
"times": PackedFloat32Array(0, 0.5, 1, 1.5, 2)
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_o0unb"]
_data = {
"RESET": SubResource("Animation_gh776"),
"sprint": SubResource("Animation_8ku67"),
"walk": SubResource("Animation_lrqmv")
}

[sub_resource type="Animation" id="Animation_fvvjq"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Camera:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Camera:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_s07ye"]
resource_name = "jump"
length = 3.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Camera:rotation")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.6, 3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0.0349066, 0, 0), Vector3(0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_l1rph"]
resource_name = "land_left"
length = 1.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Camera:rotation")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(-0.0349066, 0, 0.0174533), Vector3(0, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Camera:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5, 1.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, -0.1, 0), Vector3(0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_vsknp"]
resource_name = "land_right"
length = 1.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Camera:rotation")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(-0.0349066, 0, -0.0174533), Vector3(0, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Camera:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5, 1.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, -0.1, 0), Vector3(0, 0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_qeg5r"]
_data = {
"RESET": SubResource("Animation_fvvjq"),
"jump": SubResource("Animation_s07ye"),
"land_left": SubResource("Animation_l1rph"),
"land_right": SubResource("Animation_vsknp")
}

[sub_resource type="SphereShape3D" id="SphereShape3D_k4wwl"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_o2y5p"]
resource_local_to_scene = true
shader = ExtResource("3_pevgd")
shader_parameter/distortion = 0.0
shader_parameter/blink = 0.0
shader_parameter/damage = null

[sub_resource type="Shader" id="Shader_vvegd"]
code = "shader_type canvas_item;

void vertex() {
	VERTEX.y += cos(TIME * 1000.0 + VERTEX.x) * 1.0;
}

void fragment() {
	COLOR.a *= sqrt(max(0.0, 1.0 - UV.y - sin(TIME * 100.0 + UV.x * cos(TIME * 426.0) * 10.0) * 0.05));
}
"

[sub_resource type="ShaderMaterial" id="ShaderMaterial_x7hrx"]
shader = SubResource("Shader_vvegd")

[sub_resource type="LabelSettings" id="LabelSettings_xsfrp"]
font = ExtResource("4_4nvet")
font_size = 32

[sub_resource type="Theme" id="Theme_wdf0f"]
MarginContainer/constants/margin_bottom = 10
MarginContainer/constants/margin_left = 10
MarginContainer/constants/margin_right = 10
MarginContainer/constants/margin_top = 10

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_olyiy"]
streams_count = 11
stream_0/stream = ExtResource("4_g3qfg")
stream_1/stream = ExtResource("5_aiuo4")
stream_2/stream = ExtResource("7_obbav")
stream_3/stream = ExtResource("8_ijfov")
stream_4/stream = ExtResource("9_pa8pd")
stream_5/stream = ExtResource("10_kevp7")
stream_6/stream = ExtResource("11_qlqt4")
stream_7/stream = ExtResource("12_xtn5i")
stream_8/stream = ExtResource("13_ktixa")
stream_9/stream = ExtResource("14_vrhjc")
stream_10/stream = ExtResource("6_skq3o")

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_3b7dx"]
streams_count = 6
stream_0/stream = ExtResource("17_d0tqo")
stream_1/stream = ExtResource("18_wgewb")
stream_2/stream = ExtResource("19_ihgic")
stream_3/stream = ExtResource("20_u3i4r")
stream_4/stream = ExtResource("21_u6ivp")
stream_5/stream = ExtResource("22_7kqfx")

[node name="Character" type="CharacterBody3D" node_paths=PackedStringArray("HEAD", "CAMERA", "HEADBOB_ANIMATION", "JUMP_ANIMATION", "CROUCH_ANIMATION", "COLLISION_MESH")]
collision_layer = 2
script = ExtResource("1_0t4e8")
HEAD = NodePath("Head")
CAMERA = NodePath("Head/Camera")
HEADBOB_ANIMATION = NodePath("Head/HeadbobAnimation")
JUMP_ANIMATION = NodePath("Head/JumpAnimation")
CROUCH_ANIMATION = NodePath("CrouchAnimation")
COLLISION_MESH = NodePath("Collision")

[node name="Collision" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
shape = SubResource("CapsuleShape3D_uy03j")

[node name="CrouchAnimation" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_5e5t5")
}

[node name="Head" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.5, 0)

[node name="BodyShadow" type="MeshInstance3D" parent="Head"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1, 0)
cast_shadow = 3
mesh = SubResource("SphereMesh_2oomd")
skeleton = NodePath("../..")
script = ExtResource("2_5o4fy")

[node name="FrontRangeArea" type="Area3D" parent="Head"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -1.9034)
collision_layer = 0
collision_mask = 12

[node name="CollisionShape3D" type="CollisionShape3D" parent="Head/FrontRangeArea"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.647508)
shape = SubResource("BoxShape3D_f85ux")

[node name="RightHandPosition" type="Marker3D" parent="Head"]
transform = Transform3D(0.14436, 0, -0.989524, 0, 1, 0, 0.989525, 0, 0.14436, 0.379, -0.367, -0.462)

[node name="LeftHandPosition" type="Marker3D" parent="Head"]
transform = Transform3D(0.374066, -0.029785, 0.926923, -0.150478, 0.984291, 0.0923546, -0.915112, -0.174029, 0.363707, -0.510882, -0.484746, -0.543471)

[node name="Camera" type="Camera3D" parent="Head"]
far = 30.0

[node name="AttackAnimation" type="AnimationPlayer" parent="Head"]
root_node = NodePath("../RightHandPosition")
libraries = {
"": SubResource("AnimationLibrary_mtltv")
}
speed_scale = 1.5

[node name="HeadbobAnimation" type="AnimationPlayer" parent="Head"]
libraries = {
"": SubResource("AnimationLibrary_o0unb")
}
blend_times = [&"RESET", &"RESET", 0.5, &"RESET", &"walk", 0.5, &"walk", &"RESET", 0.5]

[node name="JumpAnimation" type="AnimationPlayer" parent="Head"]
libraries = {
"": SubResource("AnimationLibrary_qeg5r")
}
speed_scale = 4.0

[node name="CrouchCeilingDetection" type="ShapeCast3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
shape = SubResource("SphereShape3D_k4wwl")
target_position = Vector3(0, 0.5, 0)

[node name="EditorModule" type="Node" parent="."]
script = ExtResource("3_v3ckk")

[node name="PostProcess" type="CanvasLayer" parent="."]
layer = 100

[node name="ColorRect" type="ColorRect" parent="PostProcess"]
material = SubResource("ShaderMaterial_o2y5p")
offset_right = 1152.0
offset_bottom = 648.0
mouse_filter = 1

[node name="Label" type="Label" parent="PostProcess"]
material = SubResource("ShaderMaterial_x7hrx")
offset_right = 1152.0
offset_bottom = 648.0
label_settings = SubResource("LabelSettings_xsfrp")
horizontal_alignment = 1
vertical_alignment = 1

[node name="RespawnInfo" type="Label" parent="PostProcess"]
material = SubResource("ShaderMaterial_x7hrx")
offset_right = 1152.0
offset_bottom = 648.0
label_settings = SubResource("LabelSettings_xsfrp")
horizontal_alignment = 1
vertical_alignment = 1

[node name="InterfaceLayer" type="CanvasLayer" parent="."]
layer = 101

[node name="UserInterface" type="Control" parent="InterfaceLayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1

[node name="DebugPanel" type="PanelContainer" parent="InterfaceLayer/UserInterface"]
visible = false
layout_mode = 0
offset_left = 10.0
offset_top = 10.0
offset_right = 453.0
offset_bottom = 50.0
theme = SubResource("Theme_wdf0f")
script = ExtResource("3_x1wcc")

[node name="MarginContainer" type="MarginContainer" parent="InterfaceLayer/UserInterface/DebugPanel"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="InterfaceLayer/UserInterface/DebugPanel/MarginContainer"]
layout_mode = 2

[node name="StepsMetal" type="AudioStreamPlayer3D" parent="."]
stream = SubResource("AudioStreamRandomizer_olyiy")
volume_db = -12.0
max_polyphony = 2
bus = &"RoomReverb"

[node name="StepsConcrete" type="AudioStreamPlayer3D" parent="."]
stream = SubResource("AudioStreamRandomizer_3b7dx")
volume_db = -12.0
max_polyphony = 2
bus = &"RoomReverb"

[node name="noise1" type="AudioStreamPlayer" parent="."]
stream = ExtResource("16_jncaw")
volume_db = -70.0
autoplay = true

[node name="noise2" type="AudioStreamPlayer" parent="."]
stream = ExtResource("17_a5d4c")
volume_db = -70.0
pitch_scale = 0.8
autoplay = true

[node name="noise3" type="AudioStreamPlayer" parent="."]
stream = ExtResource("18_g00yu")
volume_db = -70.0
autoplay = true

[node name="tintinnus" type="AudioStreamPlayer" parent="."]
stream = ExtResource("20_13moh")
volume_db = -70.0
autoplay = true

[node name="RespawnTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true
